Add missing closing brackets in mail addresses
This should also fix the display problems on the website where this file is used.

--- a/THANKS
+++ b/THANKS
@@ -94,8 +94,8 @@ Translators:
 ------------
 These people have translated Geany to foreign languages:
 
-Fayssal Chamekh <chamfay(at)gmail(dot)com - ar
-Marcos Costales <marcoscostales(at)gmail(dot)com - ast
+Fayssal Chamekh <chamfay(at)gmail(dot)com> - ar
+Marcos Costales <marcoscostales(at)gmail(dot)com> - ast
 Yura Siamashka <yurand2(at)gmail(dot)com> - be_BY
 Dilyan Rusev <dilyanrusev(at)gmail(dot)com> - bg
 Toni Garcia-Navarro <topi(at)elpiset(dot)net> - ca_ES
@@ -105,7 +105,7 @@ Karel Kolman <kolmis(at)gmail(dot)com> - cs_CZ
 Frank Lanitz <frank(at)frank(dot)uvena(dot)de> - de_DE
 Dominic Hopf <dmaphy(at)googlemail(dot)com> - de_DE
 Stavros Temertzidis <bullgr(at)gmail(dot)com> - el
-Jeff Bailes <thepizzaking(at)gmail(dot)com - en_GB
+Jeff Bailes <thepizzaking(at)gmail(dot)com> - en_GB
 Damián Viano <debian(at)damianv(dot)com(dot)ar> - es
 Antonio Jiménez González <tonificante(at)hotmail(dot)com> - es
 Nacho Cabanes <ncabanes(at)gmail(dot)com> - es
@@ -116,7 +116,7 @@ Jari Rahkonen <jari(dot)rahkonen(at)pp1(dot)inet(dot)fi> - fi
 Jean-Philippe Moal <skateinmars(at)skateinmars(dot)net> - fr
 Roland Baudin <roland(dot)baudin(at)thalesaleniaspace(dot)com> - fr
 Lionel Fuentes <funto66(at)gmail(dot)com> - fr
-Benjamin Ballet <benjamin(dot)ballet(at)gmail(dot)com -fr
+Benjamin Ballet <benjamin(dot)ballet(at)gmail(dot)com> -fr
 José Manuel Castroagudín Silva <chavescesures(at)mail(dot)com> - gl
 Gabor Kmetyko aka kilo <kg_kilo(at)freemail(dot)hu> - hu
 M.Baldinelli <m(dot)baldinelli(at)agora(dot)it> - it
@@ -127,7 +127,7 @@ Chikahiro Masami <cmasa(dot)z321(at)gmail(dot)com> - ja
 Park Jang-heon <dotkabi(at)gmail(dot)com> - ko
 Baurzhan Muftakhidinov <baurthefirst(at)gmail(dot)com> - kk
 Laurent Hoeltgen <hoeltgman(at)gmail(dot)com> - lb
-Algimantas Margevičius <margevicius(dot)algimantas(at)gmail(dot)com - lt
+Algimantas Margevičius <margevicius(dot)algimantas(at)gmail(dot)com> - lt
 tsetsee <tsetsee(dot)yugi(at)gmail(dot)com> - mn
 Kurt De Bree <kdebree(at)telenet(dot)be> - nl
 Peter Scholtens <<peter(dot)scholtens(at)xs4all(dot)nl> - nl
@@ -138,7 +138,7 @@ Krzysztof Troska <elleander86(at)gmail(dot)com> - pl_PL
 Wojciech Świderski <woj.swiderski@gmail.com> - pl_PL
 Alexandre Moreira <alexandream(at)gmail(dot)com> - pt_BR
 Adrovane Marques Kade <adrovane(at)gmail(dot)com> - pt_BR
-Rafael Peregrino da Silva <rperegrino(at)linuxnewmedia(dot)com(dot)br - pt_BR
+Rafael Peregrino da Silva <rperegrino(at)linuxnewmedia(dot)com(dot)br> - pt_BR
 Alex Eftimie <alex(at)rosedu(dot)org> - ro
 brahmann_ <brahmann(at)pisem(dot)net> - ru_RU
 Nikita E. Shalaev <nshalaev(at)eu(dot)spb(dot)ru> - ru_RU
@@ -148,7 +148,7 @@ John Wehin <john(dot)wehin(at)gmail(dot)com> - ru_RU
 Tomáš Vadina <kyberdev(at)gmail(dot)com> - sk
 Jože Klepec <joze(dot)klepec(at)siol(dot)net> - sl
 Tony Mattsson <superxorn(at)gmail(dot)com> - sv
-Gürkan Gür <seqizz(at)gmail(dot)com - tr
+Gürkan Gür <seqizz(at)gmail(dot)com> - tr
 Boris Dibrov <dibrov(dot)bor(at)gmail(dot)com> - uk
 Clytie Siddall <clytie(at)riverland(dot)net(dot)au> - vi_VN
 Dormouse Young <mouselinux(at)163(dot)com> - zh_CN
