Remove double opening bracket

--- a/THANKS
+++ b/THANKS
@@ -130,7 +130,7 @@ Laurent Hoeltgen <hoeltgman(at)gmail(dot)com> - lb
 Algimantas Margevičius <margevicius(dot)algimantas(at)gmail(dot)com> - lt
 tsetsee <tsetsee(dot)yugi(at)gmail(dot)com> - mn
 Kurt De Bree <kdebree(at)telenet(dot)be> - nl
-Peter Scholtens <<peter(dot)scholtens(at)xs4all(dot)nl> - nl
+Peter Scholtens <peter(dot)scholtens(at)xs4all(dot)nl> - nl
 Ayke van Laethem <aykevanlaethem(at)gmail(dot)com> - nl
 Jacek Wolszczak <shutdownrunner(at)o2(dot)pl> - pl_PL
 Jarosław Foksa <jfoksa(at)gmail(dot)com> - pl_PL
