--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 Geany 1.23 (unreleased)
 
     Editor
-    * Update Scintilla to version 3.2.0.
+    * Update Scintilla to version 3.2.1 (#3540469).
 
 
 Geany 1.22 (June 18, 2012)
