Adding Hebrew translation

--- a/THANKS
+++ b/THANKS
@@ -118,6 +118,7 @@ Roland Baudin <roland(dot)baudin(at)thalesaleniaspace(dot)com> - fr
 Lionel Fuentes <funto66(at)gmail(dot)com> - fr
 Benjamin Ballet <benjamin(dot)ballet(at)gmail(dot)com> -fr
 José Manuel Castroagudín Silva <chavescesures(at)mail(dot)com> - gl
+Yosef Or Botschko <yosefor3(at)walla(dot)com> - he
 Gabor Kmetyko aka kilo <kg_kilo(at)freemail(dot)hu> - hu
 M.Baldinelli <m(dot)baldinelli(at)agora(dot)it> - it
 Dario Santomarco <dariello(at)yahoo(dot)it> - it
