Fix "mark all" search feature when using regular expressions
Use the proper, full-featured, regular expression engine we use
everywhere else rather than Scintilla's stripped-down one.

Closes #3564132.

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,9 @@ Geany 1.23 (unreleased)
     Editor
     * Update Scintilla to version 3.2.1 (#3540469).
 
+    Search
+    * 'Mark All' now also uses the fully-featured PCRE engine (#3564132).
+
 
 Geany 1.22 (June 18, 2012)
 
