Fix a c-format typo in the Turkish translation leading to a crash

--- a/po/tr.po
+++ b/po/tr.po
@@ -4973,7 +4973,7 @@ msgstr ""
 #. L = lines
 #: ../src/ui_utils.c:219
 msgid "%dL"
-msgstr "%sS"
+msgstr "%dS"
 
 #. RO = read-only
 #: ../src/ui_utils.c:225 ../src/ui_utils.c:232
