--- a/po/et.po
+++ b/po/et.po
@@ -1724,7 +1724,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:395
 msgid "Full_screen"
-msgstr "_TäisekraanLisa sulgev ühekordne jutumärk peale "
+msgstr "_Täisekraan"
 
 #: ../data/geany.glade.h:396
 msgid "Show Message _Window"
@@ -1889,7 +1889,7 @@ msgstr "_Eemalda tähised"
 
 #: ../data/geany.glade.h:436
 msgid "Remove Error _Indicators"
-msgstr ""
+msgstr "Eemalda vea _indikaatorid"
 
 #: ../data/geany.glade.h:437
 msgid "_Project"
@@ -1913,11 +1913,11 @@ msgstr "_Sulge"
 
 #: ../data/geany.glade.h:442
 msgid "Apply the default indentation settings to all documents"
-msgstr ""
+msgstr "Rakenda vaikimisi taande seadistused kõigile dokumentidele"
 
 #: ../data/geany.glade.h:443
 msgid "_Apply Default Indentation"
-msgstr ""
+msgstr "_Rakenda vaikimisi taane"
 
 #. build the code
 #: ../data/geany.glade.h:444 ../src/build.c:2568 ../src/build.c:2845
@@ -1946,7 +1946,7 @@ msgstr "Sõnade _arv"
 
 #: ../data/geany.glade.h:450
 msgid "Load Ta_gs"
-msgstr "Laadi sildid"
+msgstr "Laadi _sildid"
 
 #: ../data/geany.glade.h:451
 msgid "_Help"
@@ -2083,6 +2083,8 @@ msgid ""
 "License text could not be found, please visit http://www.gnu.org/licenses/"
 "gpl-2.0.txt to view it online."
 msgstr ""
+"Litsensi teksti ei leitud, selle vaatamiseks külastage veebilehte aadressil"
+"http://www.gnu.org/licenses/gpl-2.0.txt"
 
 #. fall back to %d
 #: ../src/build.c:748
@@ -2107,12 +2109,12 @@ msgstr ""
 #: ../src/build.c:900
 #, c-format
 msgid "Failed to change the working directory to \"%s\""
-msgstr ""
+msgstr "Kausta \"%s\" liikumine nurjus"
 
 #: ../src/build.c:929
 #, c-format
 msgid "Failed to execute \"%s\" (start-script could not be created: %s)"
-msgstr ""
+msgstr "\"%s\" käivitamine ebaõnnestus (käivitusskripti loomine nurjus: %s)"
 
 #: ../src/build.c:984
 msgid ""
@@ -2128,48 +2130,51 @@ msgstr ""
 
 #: ../src/build.c:1195
 msgid "Compilation failed."
-msgstr ""
+msgstr "Kompileerimine ebaõnnestus."
 
 #: ../src/build.c:1209
 msgid "Compilation finished successfully."
-msgstr ""
+msgstr "Kompileerimine edukalt lõpetatud."
 
 #: ../src/build.c:1395
 msgid "Custom Text"
-msgstr ""
+msgstr "Kohandatud teks"
 
 #: ../src/build.c:1396
 msgid "Enter custom text here, all entered text is appended to the command."
-msgstr ""
+msgstr "Sisesta kohandatud tekst siia. Sisestatud tekst lisatakse käsu lõppu."
 
 #: ../src/build.c:1474
 msgid "_Next Error"
-msgstr ""
+msgstr "_Järgmine viga"
 
 #: ../src/build.c:1476
 msgid "_Previous Error"
-msgstr ""
+msgstr "_Eelmine viga"
 
 #. arguments
 #: ../src/build.c:1486 ../src/build.c:2885
 msgid "_Set Build Commands"
-msgstr ""
+msgstr "_Määra ehitamise käsud"
 
 #: ../src/build.c:1770 ../src/toolbar.c:372
 msgid "Build the current file"
-msgstr ""
+msgstr "Ehita aktiivne fail"
 
 #: ../src/build.c:1781
+#, fuzzy
 msgid "Build the current file with Make and the default target"
-msgstr ""
+msgstr "Ehita aktiivne fail Make'i ja vaikimisi sihtmärgiga"
 
 #: ../src/build.c:1783
+#, fuzzy
 msgid "Build the current file with Make and the specified target"
-msgstr ""
+msgstr "Ehita aktiivne fail Make'i ja määratud sihtmärgiga"
 
 #: ../src/build.c:1785
+#, fuzzy
 msgid "Compile the current file with Make"
-msgstr ""
+msgstr "Ehita aktiivne fail Make'iga"
 
 #: ../src/build.c:1812
 #, c-format
@@ -2186,20 +2191,20 @@ msgstr ""
 
 #: ../src/build.c:1967 ../src/symbols.c:743 ../src/tools.c:554
 msgid "Label"
-msgstr ""
+msgstr "Silt"
 
 #. command column, holding status and command display
 #: ../src/build.c:1968 ../src/symbols.c:738 ../src/tools.c:539
 msgid "Command"
-msgstr ""
+msgstr "Käsk"
 
 #: ../src/build.c:1969
 msgid "Working directory"
-msgstr ""
+msgstr "Töökataloog"
 
 #: ../src/build.c:1970
 msgid "Reset"
-msgstr ""
+msgstr "Lähtesta"
 
 #: ../src/build.c:2015
 msgid "Click to set menu item label"
@@ -2215,8 +2220,9 @@ msgid "No filetype"
 msgstr ""
 
 #: ../src/build.c:2110 ../src/build.c:2145
+#, fuzzy
 msgid "Error regular expression:"
-msgstr ""
+msgstr "Vigane regulaaravaldis:"
 
 #: ../src/build.c:2138
 msgid "Independent commands"
@@ -2228,7 +2234,7 @@ msgstr ""
 
 #: ../src/build.c:2179
 msgid "Execute commands"
-msgstr ""
+msgstr "Käivita käsud"
 
 #: ../src/build.c:2191
 #, c-format
@@ -2243,11 +2249,11 @@ msgstr ""
 
 #: ../src/build.c:2561
 msgid "_Compile"
-msgstr ""
+msgstr "_Kompileeri"
 
 #: ../src/build.c:2575 ../src/build.c:2605 ../src/build.c:2813
 msgid "_Execute"
-msgstr ""
+msgstr "_Käivita"
 
 #. build the code with make custom
 #: ../src/build.c:2620 ../src/build.c:2811 ../src/build.c:2865
@@ -2270,27 +2276,27 @@ msgstr ""
 
 #: ../src/callbacks.c:148
 msgid "Do you really want to quit?"
-msgstr ""
+msgstr "Kas tahad tõesti väljuda?"
 
 #: ../src/callbacks.c:206
 #, c-format
 msgid "%d file saved."
 msgid_plural "%d files saved."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d fail salvestatud."
+msgstr[1] "%d faili salvestatud."
 
 #: ../src/callbacks.c:434
 msgid "Any unsaved changes will be lost."
-msgstr ""
+msgstr "Kõik salvestamata muudatused lähevad kaotsi."
 
 #: ../src/callbacks.c:435
 #, c-format
 msgid "Are you sure you want to reload '%s'?"
-msgstr ""
+msgstr "Kas tõesti soovid '%s' uuesti laadida?"
 
 #: ../src/callbacks.c:1065 ../src/keybindings.c:465
 msgid "Go to Line"
-msgstr ""
+msgstr "Mine reale"
 
 #: ../src/callbacks.c:1066
 msgid "Enter the line you want to go to:"
@@ -2303,35 +2309,35 @@ msgstr ""
 
 #: ../src/callbacks.c:1297 ../src/ui_utils.c:643
 msgid "dd.mm.yyyy"
-msgstr ""
+msgstr "pp.kk.aaaa"
 
 #: ../src/callbacks.c:1299 ../src/ui_utils.c:644
 msgid "mm.dd.yyyy"
-msgstr ""
+msgstr "kk.pp.aaaa"
 
 #: ../src/callbacks.c:1301 ../src/ui_utils.c:645
 msgid "yyyy/mm/dd"
-msgstr ""
+msgstr "aaaa/kk/pp"
 
 #: ../src/callbacks.c:1303 ../src/ui_utils.c:654
 msgid "dd.mm.yyyy hh:mm:ss"
-msgstr ""
+msgstr "pp.kk.aaaa hh:mm:ss"
 
 #: ../src/callbacks.c:1305 ../src/ui_utils.c:655
 msgid "mm.dd.yyyy hh:mm:ss"
-msgstr ""
+msgstr "kk.pp.aaaa hh:mm:ss"
 
 #: ../src/callbacks.c:1307 ../src/ui_utils.c:656
 msgid "yyyy/mm/dd hh:mm:ss"
-msgstr ""
+msgstr "aaaa/kk/pp hh:mm:ss"
 
 #: ../src/callbacks.c:1309 ../src/ui_utils.c:665
 msgid "_Use Custom Date Format"
-msgstr ""
+msgstr "_Kasuta kohandatud kuupäeva vormingut"
 
 #: ../src/callbacks.c:1313
 msgid "Custom Date Format"
-msgstr ""
+msgstr "Kohandatud kuupäeva vorming"
 
 #: ../src/callbacks.c:1314
 msgid ""
@@ -2350,7 +2356,7 @@ msgstr ""
 #: ../src/callbacks.c:1676
 #, c-format
 msgid "Could not open file %s (File not found)"
-msgstr ""
+msgstr "Faili %s avamine ebaõnnestus (Faili ei leitud)"
 
 #: ../src/dialogs.c:219
 msgid "Detect from file"
@@ -2358,42 +2364,42 @@ msgstr ""
 
 #: ../src/dialogs.c:222
 msgid "West European"
-msgstr ""
+msgstr "Lääne-Euroopa"
 
 #: ../src/dialogs.c:224
 msgid "East European"
-msgstr ""
+msgstr "Ida-Euroopa"
 
 #: ../src/dialogs.c:226
 msgid "East Asian"
-msgstr ""
+msgstr "Ida-Aasia"
 
 #: ../src/dialogs.c:228
 msgid "SE & SW Asian"
-msgstr ""
+msgstr "Edela- ja Kagu-Aasia"
 
 #: ../src/dialogs.c:230
 msgid "Middle Eastern"
-msgstr ""
+msgstr "Kesk-Euroopa"
 
 #: ../src/dialogs.c:232 ../src/encodings.c:112 ../src/encodings.c:113
 #: ../src/encodings.c:114 ../src/encodings.c:115 ../src/encodings.c:116
 #: ../src/encodings.c:117 ../src/encodings.c:118 ../src/encodings.c:119
 msgid "Unicode"
-msgstr ""
+msgstr "Unicode"
 
 #: ../src/dialogs.c:281
 msgid "_More Options"
-msgstr ""
+msgstr "_Rohkem valikuid"
 
 #. line 1 with checkbox and encoding combo
 #: ../src/dialogs.c:288
 msgid "Show _hidden files"
-msgstr ""
+msgstr "Näita _peidetuid faile"
 
 #: ../src/dialogs.c:299
 msgid "Set encoding:"
-msgstr ""
+msgstr "Kodeering:"
 
 #: ../src/dialogs.c:308
 msgid ""
@@ -2407,7 +2413,7 @@ msgstr ""
 #. line 2 with filetype combo
 #: ../src/dialogs.c:315
 msgid "Set filetype:"
-msgstr ""
+msgstr "Failitüüp:"
 
 #: ../src/dialogs.c:325
 msgid ""
@@ -2419,7 +2425,7 @@ msgstr ""
 
 #: ../src/dialogs.c:354 ../src/dialogs.c:459
 msgid "Open File"
-msgstr ""
+msgstr "Ava fail"
 
 #: ../src/dialogs.c:360
 msgid ""
@@ -2429,61 +2435,61 @@ msgstr ""
 
 #: ../src/dialogs.c:380
 msgid "Detect by file extension"
-msgstr ""
+msgstr "Tuvasta faililaiendist"
 
 #: ../src/dialogs.c:524
 msgid "Overwrite?"
-msgstr ""
+msgstr "Kirjuta üle?"
 
 #: ../src/dialogs.c:525
 msgid "Filename already exists!"
-msgstr ""
+msgstr "Failinimi on juba olemas!"
 
 #: ../src/dialogs.c:554 ../src/dialogs.c:667
 msgid "Save File"
-msgstr ""
+msgstr "Salvesta fail"
 
 #: ../src/dialogs.c:563
 msgid "R_ename"
-msgstr ""
+msgstr "_Nimeta ümber"
 
 #: ../src/dialogs.c:564
 msgid "Save the file and rename it"
-msgstr ""
+msgstr "Salvesta fail ja nimeta see ümber"
 
 #: ../src/dialogs.c:685 ../src/win32.c:678
 msgid "Error"
-msgstr ""
+msgstr "Viga"
 
 #: ../src/dialogs.c:688 ../src/dialogs.c:771 ../src/dialogs.c:1556
 #: ../src/win32.c:684
 msgid "Question"
-msgstr ""
+msgstr "Küsimus"
 
 #: ../src/dialogs.c:691 ../src/win32.c:690
 msgid "Warning"
-msgstr ""
+msgstr "Hoiatus"
 
 #: ../src/dialogs.c:694 ../src/win32.c:696
 msgid "Information"
-msgstr ""
+msgstr "Informatsioon"
 
 #: ../src/dialogs.c:775
 msgid "_Don't save"
-msgstr ""
+msgstr "_Ära salvesta"
 
 #: ../src/dialogs.c:804
 #, c-format
 msgid "The file '%s' is not saved."
-msgstr ""
+msgstr "Fail '%s' ei ole salvestatud."
 
 #: ../src/dialogs.c:805
 msgid "Do you want to save it before closing?"
-msgstr ""
+msgstr "Kas sa tahad selle enne sulgemist salvestada?"
 
 #: ../src/dialogs.c:867
 msgid "Choose font"
-msgstr ""
+msgstr "Vali font"
 
 #: ../src/dialogs.c:1168
 msgid ""
@@ -2495,107 +2501,107 @@ msgstr ""
 #: ../src/dialogs.c:1195 ../src/dialogs.c:1196 ../src/dialogs.c:1197
 #: ../src/symbols.c:2164 ../src/symbols.c:2178 ../src/ui_utils.c:268
 msgid "unknown"
-msgstr ""
+msgstr "tundmatu"
 
 #: ../src/dialogs.c:1202 ../src/symbols.c:893
 msgid "Properties"
-msgstr ""
+msgstr "Omadused"
 
 #: ../src/dialogs.c:1233
 msgid "<b>Type:</b>"
-msgstr ""
+msgstr "<b>Tüüp:</b>"
 
 #: ../src/dialogs.c:1247
 msgid "<b>Size:</b>"
-msgstr ""
+msgstr "<b>Suurus:</b>"
 
 #: ../src/dialogs.c:1263
 msgid "<b>Location:</b>"
-msgstr ""
+msgstr "<b>Asukoht:</b>"
 
 #: ../src/dialogs.c:1277
 msgid "<b>Read-only:</b>"
-msgstr ""
+msgstr "<b>Kirjutuskaitstud:</b>"
 
 #: ../src/dialogs.c:1284
 msgid "(only inside Geany)"
-msgstr ""
+msgstr "(ainult Geanys)"
 
 #: ../src/dialogs.c:1293
 msgid "<b>Encoding:</b>"
-msgstr ""
+msgstr "<b>Kodeering:</b>"
 
 #: ../src/dialogs.c:1303 ../src/ui_utils.c:272
 msgid "(with BOM)"
-msgstr ""
+msgstr "(koos BOMiga)"
 
 #: ../src/dialogs.c:1303
 msgid "(without BOM)"
-msgstr ""
+msgstr "(ilma BOMita)"
 
 #: ../src/dialogs.c:1314
 msgid "<b>Modified:</b>"
-msgstr ""
+msgstr "<b>Muudetud:</b>"
 
 #: ../src/dialogs.c:1328
 msgid "<b>Changed:</b>"
-msgstr ""
+msgstr "<b>Muudetud:</b>"
 
 #: ../src/dialogs.c:1342
 msgid "<b>Accessed:</b>"
-msgstr ""
+msgstr "<b>Pöördutud:</b>"
 
 #: ../src/dialogs.c:1364
 msgid "<b>Permissions:</b>"
-msgstr ""
+msgstr "<b>Õigused:</b>"
 
 #. Header
 #: ../src/dialogs.c:1372
 msgid "Read:"
-msgstr ""
+msgstr "Lugemine:"
 
 #: ../src/dialogs.c:1379
 msgid "Write:"
-msgstr ""
+msgstr "Kirjutamine:"
 
 #: ../src/dialogs.c:1386
 msgid "Execute:"
-msgstr ""
+msgstr "Käivitamine:"
 
 #. Owner
 #: ../src/dialogs.c:1394
 msgid "Owner:"
-msgstr ""
+msgstr "Omanik:"
 
 #. Group
 #: ../src/dialogs.c:1430
 msgid "Group:"
-msgstr ""
+msgstr "Grupp:"
 
 #. Other
 #: ../src/dialogs.c:1466
 msgid "Other:"
-msgstr ""
+msgstr "Teised:"
 
 #: ../src/document.c:600
 #, c-format
 msgid "File %s closed."
-msgstr ""
+msgstr "Fail %s on suletud."
 
 #: ../src/document.c:744
 #, c-format
 msgid "New file \"%s\" opened."
-msgstr ""
+msgstr "Avati uus fail \"%s\"."
 
 #: ../src/document.c:795 ../src/document.c:1319
 #, c-format
 msgid "Could not open file %s (%s)"
-msgstr ""
+msgstr "Faili %s avamine nurjus (%s)"
 
 #: ../src/document.c:815
 #, c-format
 msgid "The file \"%s\" is not valid %s."
-msgstr ""
+msgstr "Fail \"%s\" ei ole korrektne %s."
 
 #: ../src/document.c:821
 #, c-format
@@ -2615,15 +2621,15 @@ msgstr ""
 
 #: ../src/document.c:1033
 msgid "Spaces"
-msgstr ""
+msgstr "Tühikud"
 
 #: ../src/document.c:1036
 msgid "Tabs"
-msgstr ""
+msgstr "Tabeldusmärgid"
 
 #: ../src/document.c:1039
 msgid "Tabs and Spaces"
-msgstr ""
+msgstr "Tabeldusmärgid ja tühikud"
 
 #. For translators: first wildcard is the indentation mode (Spaces, Tabs, Tabs
 #. * and Spaces), the second one is the filename
